--- a/servidor-fc/server/package.json
+++ b/servidor-fc/server/package.json
@@ -27,7 +27,8 @@
     "sequelize": "^6.35.1",
     "shortid": "^2.2.16",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
